{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 15,
  "lineage": "e53adc6b-2276-77ed-90c7-45c8ff32ae2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5ee92e2d63afc18",
            "arn": "arn:aws:ec2:ap-south-1:408834627625:instance/i-09773ae1c1a12d830",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "go-proxy-profile",
            "id": "i-09773ae1c1a12d830",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0598f2d10cc82efea",
            "private_dns": "ip-10-0-1-188.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.188",
            "public_dns": "ec2-3-111-144-151.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.144.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-058fecc3d0c5ff347",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0804a09161f948b16",
            "tags": {
              "Name": "Go-Proxy-Server"
            },
            "tags_all": {
              "Name": "Go-Proxy-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02627acf54876279c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.proxy",
            "aws_iam_role.proxy",
            "aws_security_group.proxy",
            "aws_subnet.proxy_public",
            "aws_vpc.proxy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "proxy_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408834627625:internet-gateway/igw-0b201767778052c09",
            "id": "igw-0b201767778052c09",
            "owner_id": "408834627625",
            "tags": {
              "Name": "Proxy-IGW"
            },
            "tags_all": {
              "Name": "Proxy-IGW"
            },
            "vpc_id": "vpc-0ad30c0307ebf4e75"
          },
          "dependencies": [
            "aws_vpc.proxy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "proxy_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408834627625:route-table/rtb-051e460fc3372e62e",
            "id": "rtb-051e460fc3372e62e",
            "owner_id": "408834627625",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b201767778052c09",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Proxy-Public-RT"
            },
            "tags_all": {
              "Name": "Proxy-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad30c0307ebf4e75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.proxy_igw",
            "aws_vpc.proxy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "proxy_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0008412a17ce3ea55",
            "route_table_id": "rtb-051e460fc3372e62e",
            "subnet_id": "subnet-0804a09161f948b16"
          },
          "dependencies": [
            "aws_internet_gateway.proxy_igw",
            "aws_route_table.proxy_public",
            "aws_subnet.proxy_public",
            "aws_vpc.proxy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408834627625:security-group/sg-02627acf54876279c",
            "description": "Go reverse proxy security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02627acf54876279c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "proxy-sg",
            "name_prefix": "",
            "owner_id": "408834627625",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proxy-sg"
            },
            "tags_all": {
              "Name": "proxy-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad30c0307ebf4e75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.proxy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "proxy_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408834627625:subnet/subnet-0804a09161f948b16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0804a09161f948b16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "408834627625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Proxy-Public-Subnet"
            },
            "tags_all": {
              "Name": "Proxy-Public-Subnet"
            },
            "vpc_id": "vpc-0ad30c0307ebf4e75"
          },
          "dependencies": [
            "aws_vpc.proxy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "proxy_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:408834627625:vpc/vpc-0ad30c0307ebf4e75",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004ad74cdf6b79f4e",
            "default_route_table_id": "rtb-0f1f395942fe34775",
            "default_security_group_id": "sg-06bbf0cba863bec04",
            "dhcp_options_id": "dopt-0e5cb375cf36fbbdf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad30c0307ebf4e75",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f1f395942fe34775",
            "owner_id": "408834627625",
            "tags": {
              "Name": "Proxy-VPC"
            },
            "tags_all": {
              "Name": "Proxy-VPC"
            }
          }
        }
      ]
    }
  ]
}